# material_demo

./: Cargo.toml  README.md
shaders/: lighting_cube.vert.glsl  mesh.frag.glsl  mesh.vert.glsl
src/: backend.rs  camera.rs  light.rs  main.rs  material.rs  mesh.rs
