[package]
name = "arcball_demo"
version = "0.1.0"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"

[dependencies]
glfw = "0.39.1"
log = "0.4.11"
file_logger = { git = "https://github.com/lambdaxymox/file-logger" }
gdmath = { git = "https://github.com/lambdaxymox/gdmath" }
tex_atlas = { git = "https://github.com/lambdaxymox/tex_atlas" }

[build-dependencies]
gl_generator = "0.14.0"
